add version and build information to both cmd and router
